Fix message list spacing and sizing

--- a/app/assets/stylesheets/components/messages/message_form.css
+++ b/app/assets/stylesheets/components/messages/message_form.css
@@ -5,7 +5,7 @@
   z-index: 3;
   padding: 0px 20px 0px 20px;
   background-color: lightgoldenrodyellow;
-  margin-bottom: 20px;
+  margin: 20px 0px;
 }
 
 .message-form form{
